@@ -1,1 +1,3 @@
 # Please keep this file sorted alphabetically
+data/thumbnailer.schemas.in
+
